# ship-detector

./: .gitignore  README.md  main.py  pyproject.toml
configs/: inference.yaml  resnet.yaml  sam.yaml  unet.yaml  vit.yaml  vit_efficient.yaml  yolo_seg.yaml
notebooks/: eda.ipynb  resnet.ipynb  sam.ipynb  unet.ipynb  unet_rle.ipynb  vit.ipynb  vit_efficient.ipynb  vit_inference.ipynb
scripts/: eval_classifier.py  multiscale_preprocess.py  prepare_data.py  train_vit.py
ship_detector/: main.py  memory_profiler.py
ship_detector/scripts/: eval_classifier.py  eval_segmentation.py  export_geojson.py  inference_pipeline.py  inference_yolo.py  multiscale_preprocess.py  prepare_data.py  prepare_yolo_data.py  stitch.py  train_sam.py  train_unet.py  train_unet_rle.py  train_vit.py  train_vit_efficient.py  train_yolo_seg.py  trainer.py  training.py  utils.py  visualize.py
tests/: test_data_pipeline.py
